--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,13 +23,13 @@
         <section class="task-area">
             <div class="task-tabs">
                 <div id="under-line"></div>
-                <div>
+                <div id="all">
                     모두
                 </div>
-                <div>
+                <div id="ing">
                     진행중
                 </div>
-                <div>
+                <div id="done">
                     끝남
                 </div>
             </div>
@@ -38,10 +39,10 @@
                     <div>
                         <button>Check</button>
                         <button>Delete</button> -->
-                    </div>
                 </div>
             </div>
-        </section>
+    </div>
+    </section>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
