--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Todo List</h1>
         <section class="input-area">
             <input type="text" id="task-input">
-            <button id="add-btn">+</button>
+            <button id="add-btn"><i class="fa-regular fa-square-plus fa-2xl"></i></button>
         </section>
 
         <section class="task-area">
@@ -34,12 +34,6 @@
                 </div>
             </div>
             <div id="task-board">
-                <div class="task">
-                    <!-- <div>집가기</div>
-                    <div>
-                        <button>Check</button>
-                        <button>Delete</button> -->
-                </div>
             </div>
     </div>
     </section>
