git 링크 추가, 삭제 확인기능 추가, 코드 순서정리

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <section class="input-area">
             <input type="text" id="task-input">
             <button id="add-btn"><i class="fa-solid fa-meteor fa-2xl" style="color: #ffffff;"></i></button>
+            <a href="https://github.com/SpringDream0406/noonaToDo">GitHub</a>
         </section>
 
         <section class="task-area">
